--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,6 +12,27 @@
 
 ## 2022.9
 
+### 2022.9.6
+请从以下题目中任选一题作答
+
+【题$1$】
+
+下面的说法可以用作  $\displaystyle\lim _{x \rightarrow x_{0}} f(x)=A$  的定义吗?   正确的给以证明, 不正确的举例说明。
+
+$$\text { “ } \forall \varepsilon>0, \exists \delta>0, \forall x: 0<\left|x-x_{0}\right|<\delta \text {, 有 }|f(x)-A|<\varepsilon \delta \text { ”。 }\blacktriangleright$$
+
+
+
+【题$2$】
+
+
+若  $f(x)$  在  $[a, b]$  上连续, 且  $f(x)$  在  $[a, b]$  上每点处都取极值, 则  $f(x)$  恒等于某个常数。$\blacktriangleright$
+
+
+
+
+---
+
 ### 2022.9.5
 请从以下题目中任选一题作答
 
@@ -24,6 +45,31 @@
 设  $a>1$ , 求无穷级数的和
 
 $s=\displaystyle\sum_{n=0}^{\infty} \frac{2^{n}}{a^{2^{n}}+1} .\blacktriangleright$
+
+$\blacktriangleleft$
+
+【题$1$】
+
+多项式  $x^{2}+x+1$  的根为  $\omega_{1}=\frac{-1+\sqrt{3} \mathrm{i}}{2}, \omega_{2}=\frac{-1-\sqrt{3} \mathrm{i}}{2}$ , 即  $x^{2}+x+1=\left(x-\omega_{1}\right)\left(x-\omega_{2}\right)$ . 
+又
+
+$$\omega_{i}^{3}-1=\left(\omega_{i}-1\right)\left(\omega_{i}^{2}+\omega_{i}+1\right)=0 \quad(i=1,2),$$
+
+可知  $\omega_{i}^{3}=1$ , 从而  $\omega_{i}^{3 m}=\omega_{i}^{3 n}=\omega_{i}^{3 p}=1$ .
+设  $f(x)=x^{3 m}+x^{3 n+1}+x^{3 p+2}$ , 则有  $f\left(\omega_{i}\right)=\omega_{i}^{3 m}+\omega_{i}^{3 n+1}+\omega_{i}^{3 p+2}=1+\omega_{i}+\omega_{i}^{2}=0$  所以可得  $\left(x-\omega_{i}\right) \mid f(x)(i=1,2)$ . 又因为  $x-\omega_{1}$  与  $x-\omega_{2}$  互素, 所以  $\left(x-\omega_{1}\right)\left(x-\omega_{2}\right) \mid f(x)$ ,
+即  $\left(x^{2}+x+1\right) \mid f(x).\blacksquare$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+对于  $a>1$ , 由于
+
+$$\frac{2^{n}}{a^{2^n}+1}=\frac{2^{n}\left(a^{2^{n}}-1\right)}{a^{2^{n+1}}-1}=\frac{2^{n}\left(a^{2^{n}}+1\right)-2^{n+1}}{a^{2^{n+1}}-1}=\frac{2^{n}}{a^{2^{n}}-1}-\frac{2^{n+1}}{a^{2^{n+1}}-1}$$ 
+
+所以
+
+$$s=\displaystyle\sum_{n=0}^{\infty}\left(\frac{2^{n}}{a^{2^{n}}-1}-\frac{2^{n+1}}{a^{2^{n+1}}-1}\right)=\frac{1}{a-1} .\blacksquare$$
 
 
 ---
