--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,6 +12,22 @@
 
 ## 2022.9
 
+### 2022.9.7
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $A, B$  均为  $n$  阶方阵, 证明: 
+$$\left|\begin{array}{ll}
+A & B \\
+B & A
+\end{array}\right|=|A+B| \cdot|A-B|.\blacktriangleright$$ 
+
+【题$2$】
+
+求出过原点且和椭球面  $4 x^{2}+5 y^{2}+6 z^{2}=1$  的交线为一个圆周的所有平面$.\blacktriangleright$
+
+
 ### 2022.9.6
 请从以下题目中任选一题作答
 
@@ -28,7 +44,34 @@ $$\text { “ } \forall \varepsilon>0, \exists \delta>0, \forall x: 0<\left|x-x_
 
 若  $f(x)$  在  $[a, b]$  上连续, 且  $f(x)$  在  $[a, b]$  上每点处都取极值, 则  $f(x)$  恒等于某个常数。$\blacktriangleright$
 
+$\blacktriangleleft$
 
+【题$1$】
+
+不能。  
+
+考虑$f(x)=\{\begin{array}{ll}1, & x \text { 为有理数 } \\ 0, & x \text { 为无理数 }\end{array}, \forall x_{0} \in R$, $\displaystyle\lim _{x \rightarrow x_{0}} f(x)$.  不存在。 
+
+取  $A=0, \forall \varepsilon>0$ , 取  $\delta=2 / \varepsilon, 0<\left|x-x_{0}\right|<\delta$ , 有  $|f(x)-A|=|f(x)|<\varepsilon \delta=2.\blacksquare$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+若不, 有  $a_{1}, b_{1} \in[a, b], a_{1} \neq b_{1}, f\left(a_{1}\right) \neq f\left(b_{1}\right)$  。
+
+设  $f\left(a_{1}\right)<f\left(b_{1}\right), a_{1}<b_{1} ,  \exists a_{2}, b_{2}, a_{2}<b_{2}$ , 使  $f\left(a_{1}\right)<f\left(a_{2}\right)<f\left(b_{2}\right)<f\left(b_{1}\right), \quad b_{2}-a_{2}<\frac{1}{2}\left(b_{1}-a_{1}\right)   \exists a_{3}, b_{3}, a_{3}<b_{3}$ , 使  $f\left(a_{2}\right)<f\left(a_{3}\right)<f\left(b_{3}\right)<f\left(b_{2}\right), b_{3}-a_{3}<\frac{1}{2^{2}}\left(b_{2}-a_{2}\right)$  
+
+$(i)  \left[a_{n}, b_{n}\right] \supset\left[a_{n+1}, b_{n+1}\right]$ ;
+ 
+
+$(ii)  b_{n}-a_{n} \rightarrow 0$ ;
+
+$(iii)  f\left(a_{n}\right)$  递增,  $f\left(b_{n}\right)$  递增,  $f\left(a_{n}\right)<f\left(b_{n}\right)$ 
+
+由闭区间套定理, 
+
+$\exists  x_{0} \in\left[a_{n}, b_{n}\right], \quad \lim a_{n}=\lim b_{n}=x_{0} \in(a, b),   f\left(a_{n}\right)<f\left(x_{0}\right)<f\left(b_{n}\right)   \Rightarrow x_{0}$  不是  $f(x)$  的局部极值, 矛盾。$\blacksquare$
 
 
 ---
