--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,6 +12,22 @@
 
 ## 2022.9
 
+### 2022.9.8
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $f_{n}(x)$  在  $[\mathbf{a}, \mathbf{b}]$  上连续,  $n=1,2, \cdots$ , 且对每个  $x \in[\mathbf{a}, \mathbf{b}],\left\{f_{n}(x)\right\}$  有界, 则  $[\mathbf{a}, \mathbf{b}]$  中必存在一个小区间使  $\left\{f_{n}(x)\right\}$  在其上一致有界。$\blacktriangleright$
+
+【题$2$】
+
+设集合  $\mathbf{S}=\left\{x \mid x \in \mathbb{Q}, x^{2}<3\right\}$  。证明:
+$(1)$ 集合  $S$  没有最大数和最小数;
+$(2)$ 集合  $S$  在  $\mathbb{Q}$  内没有上确界与下确界。$\blacktriangleright$
+
+
+---
+
 ### 2022.9.7
 请从以下题目中任选一题作答
 
@@ -27,6 +43,50 @@ B & A
 
 求出过原点且和椭球面  $4 x^{2}+5 y^{2}+6 z^{2}=1$  的交线为一个圆周的所有平面$.\blacktriangleright$
 
+$\blacktriangleleft$
+
+【题$1$】
+
+因为  $\left(\begin{array}{ll}E & E \\ O & E\end{array}\right)\left(\begin{array}{cc}A & B \\ B & A\end{array}\right)\left(\begin{array}{cc}E & -E \\ O & E\end{array}\right)=\left(\begin{array}{cc}A+B & O \\ B & A-B\end{array}\right)$ , 
+
+所以
+
+$$\left|\begin{array}{cc}
+A & B \\
+B & A
+\end{array}\right|=\left|\begin{array}{cc}
+E & E \\
+O & E
+\end{array}\right|\left|\begin{array}{cc}
+A & B \\
+B & A
+\end{array}\right|\left|\begin{array}{cc}
+E & -E \\
+O & E
+\end{array}\right|=\left|\begin{array}{cc}
+A+B & O \\
+B & A-B
+\end{array}\right|=|A+B| \cdot|A-B|.\blacksquare$$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+由题意可知, 所述圆周是由以原点为球心的球面
+
+$$x^{2}+y^{2}+z^{2}=R^{2}$$
+
+和椭球面
+
+$$4 x^{2}+5 y^{2}+6 z^{2}=1$$
+
+的交线. 由上面两个方程确定的平面, 即所求的平面, 也必包含上述圆周. 联立此二式, 得
+
+$$\left(4-\frac{1}{R^{2}}\right) x^{2}+\left(5-\frac{1}{R^{2}}\right) y^{2}+\left(6-\frac{1}{R^{2}}\right) z^{2}=0 .$$
+
+易见, 当  $R^{2}=1/5$  时, 有  $x^{2}-z^{2}=0$ , 这是两相交平面  $x=z, x+z=0$ , 即为所求平面$.\blacksquare$
+
+---
 
 ### 2022.9.6
 请从以下题目中任选一题作答
