--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,6 +12,30 @@
 
 ## 2022.9
 
+### 2022.9.9
+请从以下题目中任选一题作答
+
+【题$1$】
+
+求  $\int_{0}^{1} \ln x \cdot \ln (1-x) d x.\blacktriangleright$
+
+【题$2$】
+
+设 行列式  
+$$D_{n}=\left|\begin{array}{cccccc}
+1 & -1 & -1 & \cdots & -1 & -1 \\
+1 & 1 & -1 & \cdots & -1 & -1 \\
+\vdots & \vdots & \vdots & & \vdots & \vdots \\
+1 & 1 & 1 & \cdots & 1 & -1 \\
+1 & 1 & 1 & \cdots & 1 & 1
+\end{array}\right|$$
+
+求其展开式的正项总数$.\blacktriangleright$
+
+
+
+---
+
 ### 2022.9.8
 请从以下题目中任选一题作答
 
@@ -25,6 +49,44 @@
 $(1)$ 集合  $S$  没有最大数和最小数;
 $(2)$ 集合  $S$  在  $\mathbb{Q}$  内没有上确界与下确界。$\blacktriangleright$
 
+$\blacktriangleleft$
+
+【题$1$】
+
+反证法。 假设区间  $[\mathrm{a}, \mathrm{b}]$  中不存在小区间使  $\left\{f_{n}(x)\right\}$  在其上一致有界, 记 区间  $[\mathrm{a}, \mathrm{b}]$  为  $\left[a_{0}, b_{0}\right]$  。则  $\forall M>0$ , 存在自然数  $n$  及  $x \in[a, b]$ , 使  $\left|f_{n}(x)\right|>M$  。
+
+现在取  $M=1$ , 则存自然数  $n_{1}$  及  $x_{1} \in[a, b]$ , 使  $\left|f_{n_{1}}\left(x_{1}\right)\right|>1$  。由于  $f_{n_{1}}(x)$  在区间  $\left[a_{0}, b_{0}\right]$  连续, 存在  $\left[a_{1}, b_{1}\right] \subset\left[a_{0}, b_{0}\right]$ , 使得  $\forall x \in\left[a_{1}, b_{1}\right]$ , 有  $\left|f_{n_{1}}(x)\right|>1$  。 
+
+现在取  $M=2$ , 则存自然数  $n_{2}>n_{1}$  及  $x_{2} \in\left[a_{1}, b_{1}\right]$ , 使  $\left|f_{n_{2}}\left(x_{2}\right)\right|>2$  。由于  $f_{n_{2}}(x)$  在区间  $\left[a_{1}, b_{1}\right]$  连续, 存在  $\left[a_{2}, b_{2}\right] \subset\left[a_{1}, b_{1}\right]$ , 使得  $\forall x \in\left[a_{2}, b_{2}\right]$ , 有  $\left|f_{n_{2}}(x)\right|>2, \ldots$ , 这样可得到区间序列  $\left\{\left[a_{k}, b_{k}\right]\right\}$  以及自然数序列  $\left\{n_{k}\right\}$ , 使得:
+
+$$(1)  \left[a_{k}, b_{k}\right] \subset\left[a_{k-1}, b_{k-1}\right], \quad k=1,2, \cdots$$ 
+$$(2)  \forall x \in\left[a_{k}, b_{k}\right],\left|f_{n_{k}}(x)\right|>k.$$  
+
+所以存在  $x_{0} \in \bigcap_{k=0}^{\infty}\left[a_{k}, b_{k}\right] \subset[a, b]$ , 使得  $\forall k \in N,\left|f_{n_{k}}\left(x_{0}\right)\right|>k$ , 这和条件: 对每个  $x \in[\mathrm{a} b \mathrm{~b}],\left\{f_{n}(x)\right\}$  有界矛盾。所以, 区间  $[\mathrm{a}, \mathrm{b}]$  中存在小区间使  $\left\{f_{n}(x)\right\}$  在其上一 致有界。   $\blacksquare$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+$(1)$ 反证: 假设  $y \in S$  为最大数, 则  $y^{2}<3$  。显然,  $-2<y<2$  。 
+
+由于  $\displaystyle\lim _{n \rightarrow \infty}\left(\frac{4}{n}+\frac{1}{n^{2}}\right)=0$  。所以当  $n$  充分大时,  $\frac{4}{n}+\frac{1}{n^{2}}<3-y^{2}$  。 
+
+于是  $\left(y+\frac{1}{n}\right)^{2}=y^{2}+\frac{2}{n} y+\frac{1}{n^{2}}<y^{2}+\frac{4}{n}+\frac{1}{n^{2}}<y^{2}+3-y^{2}=3$ , 
+
+而且  $y \in Q, \frac{1}{n} \in Q$ , 故  $y+\frac{1}{n} \in Q$  。所以由上面的不等式可知:  $y+\frac{1}{n} \in S$  。 
+
+这与  $y \in S$  为最大数矛盾。所以  $S$  中没有最大数。同理,  $S$  中没有最小数。  
+
+$(2)$ 反证: 假设  $S$  在  $Q$  中有上确界, 设为  $y$ , 则  $y \in Q$ 。由上确界的定义可知:  $y^{2} \leq 3 。 \quad$
+
+由 $(1)$ 的证明可知:  $y^{2}<3$  不成立。因此, $y^{2}=3$  。由于  $y \in Q$ , 因此, 
+
+$y=\frac{n}{m}$ , 其中  $m, n$  为互质的整数。于是,  $\frac{n^{2}}{m^{2}}=3$ 。 $n^{2}=3 m^{2}$  。
+
+可知,  $n$  为 $3$ 的倍数, 设  $n=3 k, k \in Z$  。于是  $9 k^{2}=3 m^{2}$  。  $m^{2}=3 k^{2}$  。可知,  $m$  也为 $3$ 的倍数。
+
+这与  $m, n$  为互质的整数矛盾。故  $y^{2} \leq 3$  不成立, 即  $S$  在  $Q$  中没有上确界。同理,  $S$ 在  $Q$  中没有下确界。$\blacksquare$
 
 ---
 
