--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -4,13 +4,26 @@
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)
-- Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
+- md源码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
 ---
 
 
 ## 2022.9
+
+### 2022.9.10
+请从以下题目中任选一题作答
+
+【题$1$】
+分别在复数域 $\mathbf{C}$ 和实数域 $\mathbf{R}$ 上写出 $x^{n}-1$  的因式分解表达式$.\blacktriangleright$
+
+
+【题$2$】
+设  $\Gamma$  为形如下列形式的 $2016$ 阶矩阵全体：每行每列只有一个非零元素, 且该非零元素为 $1$ , 试求解  $\sum_{A \in \Gamma}|A|.\blacktriangleright$ 
+
+
+---
 
 ### 2022.9.9
 请从以下题目中任选一题作答
@@ -21,7 +34,7 @@
 
 【题$2$】
 
-设 行列式  
+设有行列式  
 $$D_{n}=\left|\begin{array}{cccccc}
 1 & -1 & -1 & \cdots & -1 & -1 \\
 1 & 1 & -1 & \cdots & -1 & -1 \\
@@ -32,7 +45,33 @@ $$D_{n}=\left|\begin{array}{cccccc}
 
 求其展开式的正项总数$.\blacktriangleright$
 
+$\blacktriangleleft$
 
+【题$1$】
+
+$$\begin{aligned}
+\int_{0}^{1} \ln x \cdot \ln (1-x) \mathrm{d} x &=-\int_{0}^{1}\left(\ln x \sum_{n=1}^{\infty} \frac{x^{n}}{n}\right) \mathrm{d} x \\
+&=\left.\sum_{n=1}^{\infty} \frac{x^{n+1}}{n(n+1)} \ln x\right|_{0} ^{1}+\left.\sum_{n=1}^{\infty} \frac{x^{n+1}}{n(n+1)^{2}}\right|_{0} ^{1}=\sum_{n=1}^{\infty} \frac{1}{n(n+1)^{2}} \\
+&=\sum_{n=1}^{\infty} \frac{1}{n(n+1)}-\sum_{n=1}^{\infty} \frac{1}{(n+1)^{2}}=1-\left(\frac{\pi^{2}}{6}-1\right)=2-\frac{\pi^{2}}{6} .
+\end{aligned}.$$ $\blacksquare$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+首先, 将第  $n$  行分别加到其余各行, 可得
+
+$$D_{n}=\left|\begin{array}{cccccc}
+2 & 0 & 0 & \cdots & 0 & 0 \\
+2 & 2 & 0 & \cdots & 0 & 0 \\
+\vdots & \vdots & \vdots & & \vdots & \vdots \\
+2 & 2 & 2 & \cdots & 2 & 0 \\
+1 & 1 & 1 & \cdots & 1 & 1
+\end{array}\right|=2^{n-1}$$
+
+其次,  $D_{n}$  的展开式共有  $n  !$ 项，其中每项为 $1$ 或者  $-1$ . 
+
+设正项的个数为  $x$ , 负项的个数为  $y$ , 则有  $\left\{\begin{array}{l}x+y=n !, \\ x-y=D_{n}=2^{n-1},\end{array}\right.$  解得  $x=\frac{D_{n}+n !}{2}=\frac{2^{n-1}+n !}{2}.\blacksquare$ 
 
 ---
 
