--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -35,13 +35,15 @@
 【题$2$】
 
 设有行列式  
-$$D_{n}=\left|\begin{array}{cccccc}
+$$
+D_{n}=\left|\begin{array}{cccccc}
 1 & -1 & -1 & \cdots & -1 & -1 \\
 1 & 1 & -1 & \cdots & -1 & -1 \\
 \vdots & \vdots & \vdots & & \vdots & \vdots \\
 1 & 1 & 1 & \cdots & 1 & -1 \\
 1 & 1 & 1 & \cdots & 1 & 1
-\end{array}\right|$$
+\end{array}\right|
+$$
 
 求其展开式的正项总数$.\blacktriangleright$
 
@@ -53,7 +55,9 @@ $$\begin{aligned}
 \int_{0}^{1} \ln x \cdot \ln (1-x) \mathrm{d} x &=-\int_{0}^{1}\left(\ln x \sum_{n=1}^{\infty} \frac{x^{n}}{n}\right) \mathrm{d} x \\
 &=\left.\sum_{n=1}^{\infty} \frac{x^{n+1}}{n(n+1)} \ln x\right|_{0} ^{1}+\left.\sum_{n=1}^{\infty} \frac{x^{n+1}}{n(n+1)^{2}}\right|_{0} ^{1}=\sum_{n=1}^{\infty} \frac{1}{n(n+1)^{2}} \\
 &=\sum_{n=1}^{\infty} \frac{1}{n(n+1)}-\sum_{n=1}^{\infty} \frac{1}{(n+1)^{2}}=1-\left(\frac{\pi^{2}}{6}-1\right)=2-\frac{\pi^{2}}{6} .
-\end{aligned}.$$ $\blacksquare$
+\end{aligned}.$$ 
+
+$\blacksquare$
 
 $\blacktriangleleft$
 
@@ -61,13 +65,15 @@ $\blacktriangleleft$
 
 首先, 将第  $n$  行分别加到其余各行, 可得
 
-$$D_{n}=\left|\begin{array}{cccccc}
+$$
+D_{n}=\left|\begin{array}{cccccc}
 2 & 0 & 0 & \cdots & 0 & 0 \\
 2 & 2 & 0 & \cdots & 0 & 0 \\
 \vdots & \vdots & \vdots & & \vdots & \vdots \\
 2 & 2 & 2 & \cdots & 2 & 0 \\
 1 & 1 & 1 & \cdots & 1 & 1
-\end{array}\right|=2^{n-1}$$
+\end{array}\right|=2^{n-1}
+$$
 
 其次,  $D_{n}$  的展开式共有  $n  !$ 项，其中每项为 $1$ 或者  $-1$ . 
 
