--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -3,7 +3,7 @@
 # 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)、[CMC](http://www.cmathc.cn/)
 - md源码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
@@ -11,6 +11,24 @@
 
 
 ## 2022.9
+
+### 2022.9.11
+【题】
+
+设  $N(0,0,1)$  是球面  $S: x^{2}+y^{2}+z^{2}=1$  的北极点. 
+
+$A\left(a_{1}, a_{2}, 0\right), B\left(b_{1}, b_{2}, 0\right), C\left(c_{1}, c_{2}, 0\right)$  为  $x O y$  面上不同的三点. 
+
+设连接  $N$  与  $A, B, C$  的三直线依次交球面  $S$  于点  $A_{1}, B_{1}, C_{1}$ .
+
+$(1)$ 求连接  $\boldsymbol{N}$  与  $\boldsymbol{A}$  两点的直线方程;
+
+(2) 求点  $A_{1}, B_{1}, C_{1}$  三点的坐标;
+
+(3) 给定点  $A(1,-1,0), B(-1,1,0), C(1,1,0)$  ，求四面体  $N A_{1} B_{1} C_{1}$  的体积$.\blacktriangleright$
+
+
+---
 
 ### 2022.9.10
 请从以下题目中任选一题作答
@@ -22,6 +40,47 @@
 【题$2$】
 设  $\Gamma$  为形如下列形式的 $2016$ 阶矩阵全体：每行每列只有一个非零元素, 且该非零元素为 $1$ , 试求解  $\sum_{A \in \Gamma}|A|.\blacktriangleright$ 
 
+$\blacktriangleleft$
+
+【题$1$】
+
+记  $\varepsilon_{k}=\cos \frac{2 k \pi}{n}+i \sin \frac{2 k \pi}{n}(k=0,1, \cdots, n-1)$ . 因为  $x^{n}-1$  在复数域  $\mathbf{C}$  中恰 有  $n$  个根  $\varepsilon_{k}(k=0,1, \cdots, n-1)$ , 所以多项式  $x^{n}-1$  在复数域  $\mathbf{C}$  上的因式分解为
+
+$$x^{n}-1=(x-1)\left(x-\varepsilon_{1}\right)\left(x-\varepsilon_{2}\right) \cdots\left(x-\varepsilon_{n-1}\right)=\prod_{k=0}^{n-1}\left[x-\left(\cos \frac{2 k \pi}{n}+i \sin \frac{2 k \pi}{n}\right)\right]$$
+
+下面讨论多项式 $x^{n}-1$  在实数域  $\mathbf{R}$  上的因式分解. 注意到  $\varepsilon_{k}$  的共轭复数  $\overline{\varepsilon_{k}}=\cos \frac{2 k \pi}{n}-i \sin \frac{2 k \pi}{n}=\cos \frac{2(n-k) \pi}{n}+i \sin \frac{2(n-k) \pi}{n}=\varepsilon_{n-k}$ ,
+所以  $\varepsilon_{k}+\varepsilon_{n-k}=\varepsilon_{k}+\overline{\varepsilon_{k}}=2 \cos \frac{2 k \pi}{n}$  为实数, 且由于
+
+$$\left(\varepsilon_{k}+\varepsilon_{n-k}\right)^{2}-4=4 \cos ^{2} \frac{2 k \pi}{n}-4<0 \quad(k=1, \cdots, n-1),$$
+
+故  $x^{2}-\left(\varepsilon_{k}+\varepsilon_{n-k}\right) x+1$  是实数域  $\mathbf{R}$  上的不可约多项式.
+
+从而当  $n$  为奇数时, 有
+
+$$
+x^{n}-1=(x-1)\left[x^{2}-\left(\varepsilon_{1}+\varepsilon_{n-1}\right) x+1\right]\left[x^{2}-\left(\varepsilon_{2}+\varepsilon_{n-2}\right) x+1\right] \cdots\left[x^{2}-\left(\varepsilon_{\frac{n-1}{2}}+\varepsilon_{\frac{n+1}{2}}\right) x+1\right] 
+=(x-1)\left[x^{2}-2 x \cos \frac{2 \pi}{n}+1\right]\left[x^{2}-2 x \cos \frac{4 \pi}{n}+1\right] \cdots\left[x^{2}-2 x \cos \frac{(n-1) \pi}{n}+1\right] 
+=(x-1) \prod_{k=1}^{\frac{n-1}{2}}\left(x^{2}-2 x \cos \frac{2 k \pi}{n}+1\right)
+$$
+
+当  $n$  为偶数时, 则为
+
+$$
+\begin{aligned}
+x^{n}-1=&(x-1)(x+1)\left[x^{2}-\left(\varepsilon_{1}+\varepsilon_{n-1}\right) x+1\right]\left[x^{2}-\left(\varepsilon_{2}+\varepsilon_{n-2}\right) x+1\right] \\
+& \cdots\left[x^{2}-\left(\varepsilon_{\frac{n-2}{2}}+\varepsilon_{\frac{n+2}{2}}^{2}\right) x+1\right] \\
+=&(x-1)(x+1)\left[x^{2}-2 x \cos \frac{2 \pi}{n}+1\right]\left[x^{2}-2 x \cos \frac{4 \pi}{n}+1\right] \\
+& \cdots\left[x^{2}-2 x \cos \frac{(n-2) \pi}{n}+1\right]=(x-1)(x+1) \prod_{k=1}^{\frac{n-2}{2}}\left(x^{2}-2 x \cos \frac{2 k \pi}{n}+1\right) .
+\end{aligned}
+$$
+
+$\blacksquare$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+由行列式定义可知,  $|A|=\sum_{j_{1} \cdots j_{n}}(-1)^{\tau\left(j_{1} \cdots j_{n}\right)} a_{1 j_{1}} \cdots a_{n j j_{n}}=(-1)^{\tau\left(k_{1} \cdots k_{n}\right)}$ , 其中  $a_{1 k_{1}}=\cdots=a_{n k_{n}}=1 \neq 0$ . 当  $A$  取遍  $\Gamma$  中所有矩阵时,  $k_{1} \cdots k_{n}$  就取遍了所有  $n$  级排列, 其中奇、偶排列各占一半, 所以  $\sum_{A \in \Gamma}|A|=0.\blacksquare$ 
 
 ---
 
