--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -5,6 +5,7 @@
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)、[CMC](http://www.cmathc.cn/)
 - md源码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
+- 自2022.9.12已暂停，后面可能间断续更.
 
 
 ---
@@ -27,6 +28,29 @@ $(1)$ 求连接  $\boldsymbol{N}$  与  $\boldsymbol{A}$  两点的直线方程;
 
 (3) 给定点  $A(1,-1,0), B(-1,1,0), C(1,1,0)$  ，求四面体  $N A_{1} B_{1} C_{1}$  的体积$.\blacktriangleright$
 
+$\blacktriangleleft$
+
+$(1)$ 由直线的两点式方程，直接可得过  $N, A$  两点的直线方程为  $\frac{x}{a_{1}}=\frac{y}{a_{2}}=\frac{z-1}{-1}$ .
+
+$(2)$ 直线  $N A$  的参数方程为  $x=a_{1} t, y=a_{2} t, z=1-t$  ， 将其代入球面方程，得
+
+$$\left(a_{1} t\right)^{2}+\left(a_{2} t\right)^{2}+(1-t)^{2}=1$$
+
+解得参数值为  $t=\frac{2}{a_{1}^{2}+a_{2}^{2}+1}$  或  $t=0$ . 从容可得  $A_{1}$  的坐标为  $A_{1}\left(\frac{2 a_{1}}{a_{1}^{2}+a_{2}^{2}+1}, \frac{2 a_{2}}{a_{1}^{2}+a_{2}^{2}+1}, \frac{a_{1}^{2}+a_{2}^{2}-1}{a_{1}^{2}+a_{2}^{2}+1}\right)$ . 同理不难得到 $B_{1}, C_{1}$  的坐标。
+
+$(3)$ 由$(2)$和已知坐标，代入可得  $A_{1}, B_{1}, C_{1}$  的坐标为  $A_{1}=\left(\frac{2}{3},-\frac{2}{3}, \frac{1}{3}\right), B_{1}=\left(-\frac{2}{3}, \frac{2}{3}, \frac{1}{3}\right), C_{1}=\left(\frac{2}{3}, \frac{2}{3}, \frac{1}{3}\right)$  所以，由向量混合积的几何意义，可得四面体体积为
+
+$$\begin{aligned}
+V &=\frac{1}{6}\left|\left(\overrightarrow{N A_{1}}, \overrightarrow{N B_{1}}, \overrightarrow{N C_{1}}\right)\right| \\
+&=\frac{1}{6}\left\|\begin{array}{rrr}
+\frac{2}{3} & -\frac{2}{3} & \frac{2}{3} \\
+-\frac{2}{3} & \frac{2}{3} & \frac{2}{3} \\
+-\frac{2}{3} & -\frac{2}{3} & -\frac{2}{3}
+\end{array}\right\|=\frac{1}{6} \cdot \frac{32}{27}=\frac{16}{81}
+\end{aligned}
+$$
+
+$\blacksquare$
 
 ---
 
