--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -3,7 +3,7 @@
 # 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)、[CMC](http://www.cmathc.cn/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)、[CMC](http://www.cmathc.cn/)、[征解题](https://book.douban.com/subject/3874677/)、[IISAS](https://book.douban.com/subject/34804028/)、[LSAFPI](https://book.douban.com/subject/22141961/)、[SPIRA](https://book.douban.com/subject/4052031/)
 - md源码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 - 自2022.9.12已暂停，后面可能间断续更.
 
